fix(global): improved overall styling (colors, font size, spacing, etc), and fixed some wording issues

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -10,7 +10,7 @@
   min-height: size.$footer-height;
   padding: size.$space-16 size.$space-32;
   gap: size.$space-8;
-  background: var(--grey-22);
+  background: var(--grey-44-22);
   color: var(--white);
 
   & > *:not(:last-child),
@@ -39,10 +39,6 @@
     &:hover {
       color: var(--grey-aa);
     }
-  }
-
-  .site-title {
-    font-weight: 700;
   }
 
   a {
