--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -7,7 +7,7 @@
 }
 
 @mixin primary-desktop-icon {
-  background: var(--grey-44);
+  background: var(--grey-22-44);
   cursor: pointer;
   color: var(--white);
 
